--- a/styles/media.css
+++ b/styles/media.css
@@ -7,5 +7,9 @@
     margin-bottom: 15px;
   }
 }
-@media(max-width:768px){}
+@media(max-width:768px){
+  .rectangle{
+    display: none;
+  }
+}
 @media(max-width:576px){}
