--- a/styles/layout.css
+++ b/styles/layout.css
@@ -232,3 +232,109 @@
   height: 90px;
   border: 5px solid #9297EF;
 }
+
+/* about */
+
+.about{
+  padding-top: 75px;
+  position: relative;
+}
+
+.about__left{
+  position: relative;
+}
+
+.about__word{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 190px;
+  height: 65px;
+  background: var(--primary-background);
+  border-radius: 8px;
+  box-shadow: 0px 0px 20px rgba(113, 119, 241, 0.5);
+  top: 15px;
+  left: 0;
+  color: var(--primary-text-color);
+  font-family: var(--montserrat);
+  text-transform: uppercase;
+}
+
+.about__word::before{
+  content: "5+";
+  font-size: 18px;
+  height: 40px;
+  width: 40px;
+  background: #0FDAC2;
+  font-family: var(--montserrat);
+  font-style: italic;
+  font-weight: bold;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  position: absolute;
+  right: -10px;
+  top: -15px;
+}
+
+.about__image{
+  max-width: 100%;
+}
+
+.about__right{
+  background: var(--primary-background);
+  box-shadow: 0px 0px 5px 3px rgba(113, 119, 241, 0.15);
+  border-radius: 8px;
+  padding: 30px;
+}
+
+.about__title{
+  font-family: var(--montserrat);
+  font-weight: 600;
+  font-size: 40px;
+  margin-bottom: 25px;
+  line-height: 30px;
+  text-transform: capitalize;
+  color: var(--primary-title-color);
+}
+.about__text{
+  text-transform: capitalize;
+  color: var(--primary-text-color);
+  font-family: var(--montserrat);
+  font-size: 18px;
+  line-height: 27px;
+  margin-bottom: 20px;
+}
+
+.about__button{
+  width: 190px;
+  height: 45px;
+  background: var(--secondary-background);
+  box-shadow: 0px 0px 5px 1px rgba(113, 119, 241, 0.5);
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  font-family: var(--montserrat);
+  font-size: 18px;
+  color: var(--secondary-text-color);
+  text-decoration: none;
+  transition: 0.5s;
+}
+
+.about__button:hover{
+  background: var(--primary-background);
+  color: var(--primary-text-color);
+}
+
+.about__bg{
+  width: 50%;
+  position: absolute;
+  right: 0;
+  top: -400px;
+  z-index: -2;
+}
