--- a/styles/media.css
+++ b/styles/media.css
@@ -1,15 +1,33 @@
-@media(max-width:1200px){}
-@media(max-width:992px){
-  .header__link{
-    margin-bottom: 15px;
-  }
-  .header__button{
-    margin-bottom: 15px;
+@media(max-width:1400px) {
+  .about__bg{
+    top: -300px;
   }
 }
-@media(max-width:768px){
-  .rectangle{
+
+@media(max-width:1200px) {
+  .about__bg{
+    top: -200px;
+  }
+}
+
+@media(max-width:992px) {
+  .header__link {
+    margin-bottom: 15px;
+  }
+
+  .header__button {
+    margin-bottom: 15px;
+  }
+
+  .shape {
     display: none;
   }
 }
-@media(max-width:576px){}
+
+@media(max-width:768px) {
+  .rectangle {
+    display: none;
+  }
+}
+
+@media(max-width:576px) {}
