--- a/styles/layout.css
+++ b/styles/layout.css
@@ -338,3 +338,79 @@
   top: -400px;
   z-index: -2;
 }
+
+/* Capabilities */
+
+.capabilities{
+  position: relative;
+  padding-top: 75px;
+}
+
+.capabilities__title{
+  font-size: 40px;
+  font-family: var(--montserrat);
+  font-weight: 600;
+  color: var(--primary-title-color);
+  text-align: center;
+  line-height: 49px;
+  text-transform: capitalize;
+  margin-bottom: 30px;
+}
+
+.capabilities__button{
+  width: 100%;
+  height: 60px;
+  padding: 15px 30px;
+  text-align-last: left;
+  border: none;
+  outline: none;
+  font-family: var(--montserrat);
+  font-weight: 900;
+  font-size: 22px;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  transition: 0.5s;
+}
+
+.capabilities__button.collapsed{
+  background: transparent;
+  color: var(--primary-title-color);
+}
+
+.capabilities__button::after{
+  content: '';
+  background: #dddddd;
+  height: 1px;
+  display: block;
+  width: 100%;
+  margin-top: 15px;
+}
+
+.capabilities__button:focus{
+  outline: none;
+}
+
+.capabilities__icon{
+  height: 100%;
+  margin-right: 20px;
+}
+
+.capabilities__left{
+  background: var(--primary-background);
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.capabilities__caret{
+  font-size: 25px;
+  color: #7177F1;
+  margin-left: auto;
+  font-weight: 900;
+}
+
+.capabilities__caret::before{
+  content: '\f0d8';
+}
+
