--- a/styles/layout.css
+++ b/styles/layout.css
@@ -372,6 +372,8 @@
   align-items: center;
   flex-wrap: wrap;
   transition: 0.5s;
+  background: #7177F1;
+  color: white;
 }
 
 .capabilities__button.collapsed{
@@ -379,13 +381,17 @@
   color: var(--primary-title-color);
 }
 
+.capabilities__button.collapsed::after{
+  display: block;
+}
+
 .capabilities__button::after{
   content: '';
   background: #dddddd;
   height: 1px;
-  display: block;
+  display: none;
   width: 100%;
-  margin-top: 15px;
+  margin-top: 14px;
 }
 
 .capabilities__button:focus{
@@ -394,7 +400,6 @@
 
 .capabilities__icon{
   height: 100%;
-  margin-right: 20px;
 }
 
 .capabilities__left{
@@ -403,14 +408,41 @@
   overflow: hidden;
 }
 
+.capabilities__button.collapsed .capabilities__caret{
+  color: #7177F1;
+  transform: rotateX(0);
+}
+
 .capabilities__caret{
   font-size: 25px;
-  color: #7177F1;
+  color: white;
   margin-left: auto;
   font-weight: 900;
+  transform: rotateX(180deg);
+  transition: 0.5s;
 }
 
 .capabilities__caret::before{
   content: '\f0d8';
 }
+.accordion-body{
+  background: #7177F1;
+  padding: 10px 30px 55px;
+  color: white;
+  font-family: var(--montserrat);
+  font-size: 18px;
+  line-height: 27px;
+  text-transform: capitalize;
+}
 
+.capabilities__icon_purple{
+  height: 30px;
+}
+
+.capabilities__icon-block{
+  width: 50px;
+  height: 100%;
+  margin-right: 15px;
+  display: flex;
+  justify-content: center;
+}
