--- a/styles/layout.css
+++ b/styles/layout.css
@@ -9,7 +9,7 @@
   scroll-behavior: smooth;
 }
 
-.row{
+.row {
   --bs-gutter-x: 30px;
 }
 
@@ -37,7 +37,7 @@
 
 
 
-.header__link{
+.header__link {
   font-family: var(--montserrat);
   font-size: 24px;
   color: var(--primary-title-color);
@@ -46,7 +46,7 @@
 }
 
 
-.header__button{
+.header__button {
   width: 190px;
   height: 40px;
   display: flex;
@@ -61,39 +61,39 @@
   border-radius: 8px;
 }
 
-.header__button:hover{
+.header__button:hover {
   color: var(--secondary-text-color);
   background: var(--secondary-background);
 }
 
-.header__phone{
+.header__phone {
   color: var(--primary-title-color);
   font-size: 25px;
   text-decoration: none;
 }
 
-.header__phone::before{
+.header__phone::before {
   content: "\f87b";
 }
 
-.header__toggler::before{
+.header__toggler::before {
   content: '\f0c9';
 }
 
 /* Intro-block */
 
-.intro{
+.intro {
   position: relative;
   margin-top: 30px;
 }
 
-.intro__left{
+.intro__left {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
 }
 
-.intro__description{
+.intro__description {
   color: var(--primary-text-color);
   text-transform: capitalize;
   font-family: var(--montserrat);
@@ -103,16 +103,16 @@
   margin-bottom: 10px;
 }
 
-.intro__title{
+.intro__title {
   color: var(--primary-title-color);
   font-size: 40px;
   line-height: 50px;
   text-transform: capitalize;
   font-weight: 600;
-  margin-bottom: 25px; 
+  margin-bottom: 25px;
 }
 
-.intro__button{
+.intro__button {
   height: 45px;
   background: var(--secondary-background);
   display: flex;
@@ -130,29 +130,29 @@
   transition: 0.5s;
 }
 
-.intro__button:hover{
+.intro__button:hover {
   color: var(--primary-text-color);
   background: var(--primary-background);
 }
 
-.intro__brands-logo{
+.intro__brands-logo {
   width: 77px;
   margin-bottom: 15px;
 }
 
-.intro__brand{
+.intro__brand {
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.intro__brands-logo_purple{
+.intro__brands-logo_purple {
   color: #790FF1;
   width: 100px;
 }
 
-.intro__brands-name{
+.intro__brands-name {
   font-weight: 900;
   font-family: var(--montserrat);
   font-size: 20px;
@@ -160,12 +160,12 @@
   color: #7177F1;
 }
 
-.intro__images{
+.intro__images {
   position: relative;
   overflow: hidden;
 }
 
-.intro__indicators{
+.intro__indicators {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -173,7 +173,7 @@
   margin-top: 50px;
 }
 
-.intro__dot{
+.intro__dot {
   height: 15px;
   width: 15px;
   border-radius: 50%;
@@ -183,18 +183,18 @@
   margin: 0px 15px;
 }
 
-.intro__dot.active{
+.intro__dot.active {
   background: #7177F1;
 }
 
-.intro__img{
+.intro__img {
   height: 100%;
   max-height: 550px;
   width: 100%;
   object-fit: contain;
 }
 
-.rectangle_1{
+.rectangle_1 {
   position: absolute;
   z-index: -1;
   top: 80px;
@@ -204,7 +204,8 @@
   border: 5px solid #9297EF;
   transform: matrix(0.71, 0.71, -0.7, 0.71, 0, 0);
 }
-.rectangle_2{
+
+.rectangle_2 {
   position: absolute;
   z-index: -1;
   top: -30px;
@@ -214,7 +215,8 @@
   border: 5px solid #790FF1;
   border-radius: 100%;
 }
-.rectangle_3{
+
+.rectangle_3 {
   position: absolute;
   z-index: -1;
   top: 300px;
@@ -223,7 +225,8 @@
   height: 90px;
   border: 5px solid #7177F1;
 }
-.rectangle_4{
+
+.rectangle_4 {
   position: absolute;
   z-index: -1;
   top: 15px;
@@ -235,16 +238,16 @@
 
 /* about */
 
-.about{
+.about {
   padding-top: 75px;
   position: relative;
 }
 
-.about__left{
+.about__left {
   position: relative;
 }
 
-.about__word{
+.about__word {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -261,7 +264,7 @@
   text-transform: uppercase;
 }
 
-.about__word::before{
+.about__word::before {
   content: "5+";
   font-size: 18px;
   height: 40px;
@@ -280,18 +283,18 @@
   top: -15px;
 }
 
-.about__image{
+.about__image {
   max-width: 100%;
 }
 
-.about__right{
+.about__right {
   background: var(--primary-background);
   box-shadow: 0px 0px 5px 3px rgba(113, 119, 241, 0.15);
   border-radius: 8px;
   padding: 30px;
 }
 
-.about__title{
+.about__title {
   font-family: var(--montserrat);
   font-weight: 600;
   font-size: 40px;
@@ -300,7 +303,8 @@
   text-transform: capitalize;
   color: var(--primary-title-color);
 }
-.about__text{
+
+.about__text {
   text-transform: capitalize;
   color: var(--primary-text-color);
   font-family: var(--montserrat);
@@ -309,7 +313,7 @@
   margin-bottom: 20px;
 }
 
-.about__button{
+.about__button {
   width: 190px;
   height: 45px;
   background: var(--secondary-background);
@@ -326,12 +330,12 @@
   transition: 0.5s;
 }
 
-.about__button:hover{
+.about__button:hover {
   background: var(--primary-background);
   color: var(--primary-text-color);
 }
 
-.about__bg{
+.about__bg {
   width: 50%;
   position: absolute;
   right: 0;
@@ -341,12 +345,12 @@
 
 /* Capabilities */
 
-.capabilities{
+.capabilities {
   position: relative;
   padding-top: 75px;
 }
 
-.capabilities__title{
+.capabilities__title {
   font-size: 40px;
   font-family: var(--montserrat);
   font-weight: 600;
@@ -357,7 +361,7 @@
   margin-bottom: 30px;
 }
 
-.capabilities__button{
+.capabilities__button {
   width: 100%;
   height: 60px;
   padding: 15px 30px;
@@ -376,44 +380,47 @@
   color: white;
 }
 
-.capabilities__button.collapsed{
+.capabilities__button.collapsed {
   background: transparent;
   color: var(--primary-title-color);
 }
 
-.capabilities__button.collapsed::after{
-  display: block;
+.capabilities__button.collapsed::after {
+  opacity: 1;
 }
 
-.capabilities__button::after{
+.capabilities__button::after {
   content: '';
   background: #dddddd;
   height: 1px;
-  display: none;
+  display: block;
   width: 100%;
   margin-top: 14px;
+  transition: 0.5s;
+  opacity: 0;
 }
 
-.capabilities__button:focus{
+.capabilities__button:focus {
   outline: none;
 }
 
-.capabilities__icon{
+.capabilities__icon {
   height: 100%;
 }
 
-.capabilities__left{
+.capabilities__left {
   background: var(--primary-background);
   border-radius: 8px;
   overflow: hidden;
+  box-shadow: 0px 0px 5px 3px rgba(113, 119, 241, 0.15);
 }
 
-.capabilities__button.collapsed .capabilities__caret{
+.capabilities__button.collapsed .capabilities__caret {
   color: #7177F1;
   transform: rotateX(0);
 }
 
-.capabilities__caret{
+.capabilities__caret {
   font-size: 25px;
   color: white;
   margin-left: auto;
@@ -422,10 +429,11 @@
   transition: 0.5s;
 }
 
-.capabilities__caret::before{
+.capabilities__caret::before {
   content: '\f0d8';
 }
-.accordion-body{
+
+.accordion-body {
   background: #7177F1;
   padding: 10px 30px 55px;
   color: white;
@@ -435,14 +443,196 @@
   text-transform: capitalize;
 }
 
-.capabilities__icon_purple{
+.capabilities__icon_purple {
   height: 30px;
 }
 
-.capabilities__icon-block{
+.capabilities__icon-block {
   width: 50px;
   height: 100%;
   margin-right: 15px;
   display: flex;
   justify-content: center;
+}
+
+/* Work */
+
+.work {
+  margin-top: 75px;
+  position: relative;
+}
+
+.work__title {
+  font-family: var(--montserrat);
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 49px;
+  color: var(--primary-title-color);
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+.work__left {
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.work__link {
+  width: 100%;
+  height: 60px;
+  padding: 20px;
+  background: var(--primary-background);
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.35);
+  transition: 0.5s;
+  color: var(--primary-title-color);
+  font-family: var(--montserrat);
+  font-weight: 66;
+  font-size: 18px;
+  line-height: 22px;
+  display: block;
+  text-decoration: none;
+}
+
+.work__link.active {
+  color: white;
+  background: var(--secondary-background);
+  text-decoration: none;
+}
+
+.work__right {
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px 3px rgba(113, 119, 241, 0.15);
+  background: var(--primary-background);
+  height: 100%;
+  padding: 20px 30px 20px 20px;
+}
+
+.work__right.active{
+  display: flex;
+}
+
+.work__image {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 0 0 8px 8px;
+}
+
+.work__layout {
+  font-family: var(--montserrat);
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+  text-transform: capitalize;
+  color: var(--primary-title-color);
+  margin-bottom: 25px;
+}
+
+.work__text{
+  font-family: var(--montserrat);
+  font-size: 18px;
+  line-height: 27px;
+  text-transform: capitalize;
+  color: var(--primary-text-color);
+  margin-bottom: 20px;
+}
+
+.work__button{
+  width: 190px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--secondary-background);
+  color: var(--secondary-text-color);
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px 1px rgba(113, 119, 241, 0.5);
+  font-family: var(--montserrat);
+  font-weight: 600;
+  font-size: 18px;
+  text-transform: capitalize;
+  text-decoration: none;
+}
+
+.work__bg{
+    width: 50%;
+    position: absolute;
+    left: 0;
+    top: -100px;
+    z-index: -2;
+}
+
+.rectangle_5{
+  height: 100px;
+  width: 100px;
+  border: 5px solid #790FF1;
+  border-radius: 100%;
+  position: absolute;
+  z-index: -2;
+  left: 90px;
+  bottom: 150px;
+}
+.rectangle_6{
+  height: 60px;
+  width: 60px;
+  border: 5px solid #790FF1;
+  border-radius: 100%;
+  position: absolute;
+  right: 650px;
+  bottom: 50px;
+  z-index: -2;
+}
+.rectangle_7{
+  height: 100px;
+  width: 100px;
+  border: 5px solid #790FF1;
+  position: absolute;
+  transform: matrix(0.76, 0.65, 0.65, -0.76, 0, 0);
+  right: 90px;
+  top: 360px;
+  z-index: -2;
+}
+.rectangle_8{
+  height: 75px;
+  width: 75px;
+  border: 5px solid #790FF1;
+  position: absolute;
+  border-radius: 100%;
+  left: 75px;
+  top: 100px;
+  z-index: -2;
+}
+
+/* Footer */
+
+.footer{
+  padding-bottom: 100px;
+  margin-top: 220px;
+  position: relative;
+}
+
+.footer__list{
+  margin-top: 30px;
+  list-style: none;
+  display: flex;
+}
+
+.footer__link{
+  color: var(--primary-title-color);
+  font-family: var(--montserrat);
+  font-size: 24px;
+  line-height: 29px;
+  text-transform: capitalize;
+  margin-right: 30px;
+  margin-bottom: 15px;
+}
+
+.footer__contact{
+  font-family: var(--montserrat);
+  font-size: 24px;
+  line-height: 29px;
+  text-transform: capitalize;
+  color: var(--primary-title-color);
+  margin-right: 30px;
 }
